<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/white"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#dfdfdd" />

    <!-- 底部导航 -->
    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/tab_layout_business"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">


                <RelativeLayout
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/tab_img_business"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/tab_text_business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tab_img_business"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/search"
                        android:textColor="#abadbb"
                        android:textSize="12sp" />

                </RelativeLayout>



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_layout_sport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">


            <RelativeLayout
                android:paddingTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/tab_img_sport"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/tab_text_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_img_sport"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/sport"
                    android:textColor="#abadbb"
                    android:textSize="12sp" />

            </RelativeLayout>



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_layout_discovery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">


            <RelativeLayout
                android:paddingTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/tab_img_discovery"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/tab_text_discovery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_img_discovery"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/discovery"
                    android:textColor="#abadbb"
                    android:textSize="12sp" />

            </RelativeLayout>



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_layout_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">


            <RelativeLayout
                android:paddingTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/tab_img_me"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/tab_text_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_img_me"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/me"
                    android:textColor="#abadbb"
                    android:textSize="12sp" />

            </RelativeLayout>



        </RelativeLayout>

    </LinearLayout>

</LinearLayout>