<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingBottom="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@color/mainColor" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="2dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/phone_icon"
                 />

<!--            <EditText-->
<!--                android:id="@+id/username"-->
<!--                style="@style/LoginTextStyle"-->
<!--                android:hint="手机号"-->
<!--                android:inputType="number" />-->

            <cn.noname.app.widget.ClearWriteEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="请输入用户名"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#2C2C2C"
                android:textColorHint="@color/textGray"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayLine" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="2dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/password_icon"
                 />

            <cn.noname.app.widget.ClearWriteEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="请输入密码"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#2C2C2C"
                android:textColorHint="@color/textGray"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayLine" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/AppButtonStyle"
        android:text="@string/login_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/mainColor"
            android:text="忘记密码？" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_line_other"
        android:gravity="center">

        <TextView
            style="@style/AppTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/other_text"
            android:textColor="@color/textMidGray" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <RelativeLayout
                android:id="@+id/layout_wx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:id="@+id/nav_img_new"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_round_button"
                    android:padding="5dp"
                    android:src="@drawable/wx_icon"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_round_button"
                    android:padding="5dp"
                    android:src="@drawable/fb_icon"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_imsgram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_round_button"
                    android:padding="5dp"
                    android:src="@drawable/ly_icon"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_round_button"
                    android:padding="5dp"
                    android:src="@drawable/ins_icon"
                    />


            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/txt_register_tip"
        android:textColor="@color/textMidGray"
        android:layout_gravity="center"
        android:gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_register_tip" />
</LinearLayout>